<resources>
    <string name="app_name">MedTracker</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Jerim Kaura</string>
    <string name="user_email">johndoe@gmail.com</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_medication">My Medication</string>
    <string name="add_medication">Add Medication</string>
    <string name="medication_history">Medication History</string>
    <string name="logout">LOGOUT</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="fill_in_the_details_to_updated">Fill in the details to updated</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address_name">Email Address Name</string>
    <string name="full_name">Full Name</string>
    <string name="update_profile">Update Profile</string>
    <string name="success">Success</string>
    <string name="back">Back</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="recover_your_account_password">Recover your account password</string>
    <string name="email_address">Email Address</string>
    <string name="update_password">Update Password</string>
    <string name="create_password">Create Password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="create_a_new_password">Create a New Password</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="your_profile_is_successfully_updated">Your Profile is successfully updated</string>
    <string name="operation_success">Operation Success</string>
    <string name="your_password_is_succesfully_created">Your password is successfully created</string>
    <string name="btn_continue">Continue</string>
    <string name="sign_in">Sign In</string>
    <string name="hi_welcome_">Hi, Welcome Back! 👋 </string>
    <string name="remember_me">Remember me</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>

</resources>